--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -4,12 +4,12 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
 <div class="center">
 <h2> But, Why?</h2>
 <p> A dumping ground for all life's little questions</p>
 <hr>
 <p>made by <a href= "mailto: tarynrwhite@gmail.com"</a> Taryn White &hearts;</p>
+<img src=http://i.livescience.com/images/i/000/031/960/original/tyrannosaurus-rex-color-121010a-02.jpg?1349895686>
 </div>
 
 
