Boxes and color

--- a/Unit_4/index.html
+++ b/Unit_4/index.html
@@ -4,6 +4,31 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+<div class="wrapper">
+<header> But, Why?
+
+</header>
+<nav> Science, Lifestyle, Politics, Economics
+
+</nav>
+<section id="one">
+	<aside class="picture">
+	<img src=http://i.livescience.com/images/i/000/031/960/original/tyrannosaurus-rex-color-121010a-02.jpg?1349895686>
+
+	</aside>
+	<article class="description">
+	A dumping ground for all life's little questions
+
+	</article>
+</section>
+<footer>
+Thanks for stopping by!
+</footer>
+</div>
+</body>
+
+
+<body>
 <div class="center">
 <h2> But, Why?</h2>
 <p id="catchphrase"> A dumping ground for all life's little questions</p>
