--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div class="center">
-<h2> But, Why?</h2>
+<h2> But,?</h2>
 <p> A dumping ground for all life's little questions</p>
 <hr>
 <p>made by <a href= "mailto: tarynrwhite@gmail.com"</a> Taryn White &hearts;</p>
